libtorrentsharp/LibtorrentSharp.Native/include/library.h

    // Returns the TCP port the session is actually listening on. May differ
    // from the requested port when the configured `listen_interfaces` asked
    // for port 0 (OS-assigned) or when the requested port was already in use
    // and libtorrent fell back. Returns 0 when the session has no listen
    // sockets open (e.g. libtorrent failed to bind).
    LTS_EXPORT uint16_t lts_session_listen_port(lt::session* session);
    // Returns the SSL/TLS port when SSL is enabled; 0 otherwise.
    LTS_EXPORT uint16_t lts_session_ssl_listen_port(lt::session* session);
    // Returns 1 when the session has at least one open listen socket, 0
    // otherwise. Pair with the typed listen_succeeded / listen_failed alerts
    // for event-driven state tracking.
    LTS_EXPORT int8_t lts_session_is_listening(lt::session* session);
    // Reads back the session's currently-effective `listen_interfaces` setting
    // string. On success, *out_buf is a heap-allocated buffer (caller releases
    // via lts_destroy_listen_interfaces_buf); on empty / failure, both outputs
    // are zeroed.
    LTS_EXPORT void lts_session_get_listen_interfaces(lt::session* session, char** out_buf, int32_t* out_len);
    LTS_EXPORT void lts_destroy_listen_interfaces_buf(char* buf);
    // Stores an immutable BEP44 item (a binary string blob, treated as
    // libtorrent's entry::string_t) on the DHT and writes the SHA-1 target the
    // data will be retrievable under to out_target_sha1 (20 bytes). The actual
    // network put is asynchronous; completion fires a dht_put_alert which is
    // not yet exposed as a typed alert (subscribe with include_unmapped=true to
    // receive it as a generic alert until the typed wrapper lands).
    LTS_EXPORT void lts_dht_put_immutable_string(
        lt::session* session,
        const uint8_t* data,
        int32_t data_len,
        uint8_t* out_target_sha1);
    // Issues an asynchronous DHT lookup for an immutable BEP44 item identified
    // by target_sha1 (20 bytes). The result arrives as a
    // dht_immutable_item_alert carrying the bytes. Misses (no peer holds the
    // item) currently fire no alert — they time out internally.
    LTS_EXPORT void lts_dht_get_immutable(
        lt::session* session,
        const uint8_t* target_sha1);
    // Issues an asynchronous DHT lookup for a mutable BEP44 item identified by
    // an Ed25519 public key (`key32`, 32 bytes) and an optional salt. The
    // result arrives as a dht_mutable_item_alert. Pass salt=nullptr / salt_len=0
    // when no salt was used. Misses time out internally without firing.
    LTS_EXPORT void lts_dht_get_item_mutable(
        lt::session* session,
        const uint8_t* key32,
        const uint8_t* salt,
        int32_t salt_len);
    // Stores a mutable BEP44 item on the DHT. The signature is computed inside
    // the shim via lt::dht::sign_mutable_item; the caller only provides the
    // keypair, salt, raw value bytes (treated as entry::string_t), and sequence
    // number. The actual put is asynchronous; completion fires a dht_put_alert
    // (typed as DhtPutAlert with the mutable envelope filled in).
    LTS_EXPORT void lts_dht_put_item_mutable(
        lt::session* session,
        const uint8_t* public_key32,
        const uint8_t* secret_key64,
        const uint8_t* salt,
        int32_t salt_len,
        const uint8_t* value,
        int32_t value_len,
        int64_t seq);
    // Ed25519 helpers backing BEP44 mutable items. All key/seed/signature
    // buffers are caller-owned; sizes are fixed (seed=32, public=32, secret=64,
    // signature=64). The implementations forward to libtorrent's bundled
    // ed25519 reference (lt::dht::ed25519_*). These don't touch the session;
    // they live here so the binding ships a complete BEP44 toolkit.
    LTS_EXPORT void lts_ed25519_create_seed(uint8_t* out_seed32);
    LTS_EXPORT void lts_ed25519_create_keypair(
        const uint8_t* seed32,
        uint8_t* out_public_key32,
        uint8_t* out_secret_key64);
    LTS_EXPORT void lts_ed25519_sign(
        const uint8_t* message,
        int32_t message_len,
        const uint8_t* public_key32,
        const uint8_t* secret_key64,
        uint8_t* out_signature64);
    // Returns 1 if the signature verifies, 0 otherwise (or on null inputs).
    LTS_EXPORT int8_t lts_ed25519_verify(
        const uint8_t* signature64,
        const uint8_t* message,
        int32_t message_len,
        const uint8_t* public_key32);
    // Returns the total piece count for a torrent handle (works for both fully-
    // added TorrentHandle and resume-loaded MagnetHandle with embedded metadata).
    // Returns 0 when metadata hasn't resolved yet (pre-metadata magnet).
    LTS_EXPORT int32_t lts_num_pieces(lt::torrent_handle* torrent);
    // Total size of all files in the torrent in bytes. Works for TorrentHandle and
    // resume-loaded MagnetHandle with embedded metadata. Returns 0 when metadata
    // hasn't resolved yet (pre-metadata magnet).
    LTS_EXPORT int64_t lts_total_size(lt::torrent_handle* torrent);
    // Gets the file list for a torrent handle directly. Works for TorrentHandle and
    // resume-loaded MagnetHandle with embedded metadata. Caller must free with
    // destroy_torrent_file_list.
    LTS_EXPORT void lts_torrent_handle_file_list(lt::torrent_handle* torrent, torrent_file_list* file_list);
    // Attaches a torrent using a previously-captured resume blob. `resume_data` must
    // point to a bencoded add_torrent_params buffer (as produced by
    // write_resume_data_buf). `save_path` overrides the path embedded in the resume
    // blob when non-null and non-empty. Returns nullptr on parse or add failure.
    LTS_EXPORT lt::torrent_handle* lts_add_torrent_with_resume(lt::session* session, const char* resume_data, int32_t length, const char* save_path);
    // torrent info
    LTS_EXPORT torrent_metadata* get_torrent_info(lt::torrent_info* torrent);
    LTS_EXPORT void destroy_torrent_info(torrent_metadata* info);
    // file_storage scalar accessors. All return 0 on null / invalid inputs.
    // piece_length / num_pieces are torrent-wide constants; piece_size varies
    // for the last piece (trailing remainder when total_size is not a multiple
    // of piece_length). Exposed separately from torrent_metadata so callers
    // don't have to heap-allocate + free the bigger metadata struct for a
    // single integer.
    LTS_EXPORT int32_t lts_torrent_info_piece_length(lt::torrent_info* torrent);
    LTS_EXPORT int32_t lts_torrent_info_num_pieces(lt::torrent_info* torrent);
    LTS_EXPORT int32_t lts_torrent_info_piece_size(lt::torrent_info* torrent, int32_t piece_index);
    // V1 SHA-1 piece hash lookup. Fills the 20-byte buffer with the V1 piece
    // hash for `piece_index` and returns true. Returns false (and leaves the
    // buffer untouched) on null / invalid handle, out-of-range index, or
    // V2-only torrent (no V1 piece hashes — info_hashes::has_v1() is false).
    // The leaves of the V1 piece tree are the analogue of V2 merkle leaves.
    LTS_EXPORT bool lts_torrent_info_hash_for_piece(lt::torrent_info* torrent, int32_t piece_index, uint8_t* out_hash20);
    // True when the torrent carries BEP-52 v2 metadata (SHA-256 merkle trees).
    // A torrent can be v1-only, v2-only, or hybrid — this returns true for v2
    // and hybrid. Returns false on null / invalid.
    LTS_EXPORT bool lts_torrent_info_is_v2(lt::torrent_info* torrent);
    // Per-file flag bits (file_storage::file_flags_t). Bit assignment:
    //   bit 0 = pad_file, bit 1 = hidden, bit 2 = executable, bit 3 = symlink.
    // Returns 0 on null / invalid / out-of-range index.
    LTS_EXPORT uint8_t lts_torrent_info_file_flags(lt::torrent_info* torrent, int32_t file_index);
    // V2 per-file merkle root (SHA-256, 32 bytes). Fills `out_root32` with the
    // root hash and returns true. Returns false (and leaves the buffer
    // untouched) on null / invalid / out-of-range / non-V2 torrents or files
    // whose root is all-zero (libtorrent returns a zero hash when unavailable).
    LTS_EXPORT bool lts_torrent_info_file_root(lt::torrent_info* torrent, int32_t file_index, uint8_t* out_root32);
    // Symlink target for a file marked with file_flags::symlink. Writes at
    // most `buffer_size` bytes (UTF-8, NUL-terminated) into `buffer` and
    // returns the number of bytes written excluding the NUL. Returns 0 on
    // null / invalid / out-of-range / non-symlink files, or when
    // `buffer_size <= 0`. Truncates without error when the symlink target is
    // longer than the buffer.
    LTS_EXPORT int32_t lts_torrent_info_symlink(lt::torrent_info* torrent, int32_t file_index, char* buffer, int32_t buffer_size);
    // Maps a byte offset in the torrent's virtual concatenated stream to the
    // index of the file that contains it. Returns -1 on null / invalid
    // handle, negative offset, or offset >= total_size. Useful for streaming
    // scenarios: given a byte position, find the backing file.
    LTS_EXPORT int32_t lts_torrent_info_file_index_at_offset(lt::torrent_info* torrent, int64_t offset);