libtorrentsharp/LibtorrentSharp/Native/NativeMethods.cs


    /// <summary>Returns the TCP port the session is actually listening on, or 0 when not bound.</summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_session_listen_port")]
    public static partial ushort SessionListenPort(IntPtr sessionHandle);

    /// <summary>Returns the SSL/TLS port when SSL is enabled; 0 otherwise.</summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_session_ssl_listen_port")]
    public static partial ushort SessionSslListenPort(IntPtr sessionHandle);

    /// <summary>Returns 1 when the session has any open listen sockets, 0 otherwise.</summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_session_is_listening")]
    public static partial sbyte SessionIsListening(IntPtr sessionHandle);

    /// <summary>
    /// Reads back the session's currently-effective <c>listen_interfaces</c>
    /// setting string. <paramref name="outBuf"/> is heap-allocated on the
    /// native side; release via <see cref="FreeListenInterfacesBuf"/>.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_session_get_listen_interfaces")]
    public static partial void SessionGetListenInterfaces(IntPtr sessionHandle, out IntPtr outBuf, out int outLen);

    /// <summary>Releases a buffer returned by <see cref="SessionGetListenInterfaces"/>.</summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_destroy_listen_interfaces_buf")]
    public static partial void FreeListenInterfacesBuf(IntPtr buf);

    /// <summary>
    /// Stores an immutable BEP44 item (a binary string blob) on the DHT and
    /// writes the SHA-1 target the data will be retrievable under to the
    /// 20-byte <paramref name="outTargetSha1"/> buffer. The actual put is
    /// asynchronous; completion fires a <c>dht_put_alert</c> (currently
    /// surfaced only as a generic alert).
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_dht_put_immutable_string")]
    public static partial void DhtPutImmutableString(
        IntPtr sessionHandle,
        [In] byte[] data,
        int dataLen,
        [Out] byte[] outTargetSha1);

    /// <summary>
    /// Issues an asynchronous DHT lookup for an immutable BEP44 item identified
    /// by <paramref name="targetSha1"/> (20 bytes). The result arrives as a
    /// <c>dht_immutable_item_alert</c>; misses time out internally without
    /// firing an alert.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_dht_get_immutable")]
    public static partial void DhtGetImmutable(
        IntPtr sessionHandle,
        [In] byte[] targetSha1);

    /// <summary>
    /// Issues an asynchronous DHT lookup for a mutable BEP44 item identified by
    /// an Ed25519 public key (32 bytes) and an optional salt. Pass salt=null,
    /// saltLen=0 when no salt was used. Result arrives as a
    /// <c>dht_mutable_item_alert</c>; misses time out internally without firing.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_dht_get_item_mutable")]
    public static partial void DhtGetItemMutable(
        IntPtr sessionHandle,
        [In] byte[] key32,
        [In] byte[] salt,
        int saltLen);

    /// <summary>Generates 32 random bytes suitable as an Ed25519 seed.</summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_ed25519_create_seed")]
    public static partial void Ed25519CreateSeed([Out] byte[] outSeed32);

    /// <summary>
    /// Derives a deterministic Ed25519 keypair from <paramref name="seed32"/>:
    /// <paramref name="outPublicKey32"/> = 32 bytes, <paramref name="outSecretKey64"/> = 64 bytes.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_ed25519_create_keypair")]
    public static partial void Ed25519CreateKeypair(
        [In] byte[] seed32,
        [Out] byte[] outPublicKey32,
        [Out] byte[] outSecretKey64);

    /// <summary>
    /// Signs <paramref name="message"/> with the keypair, writing 64 bytes to
    /// <paramref name="outSignature64"/>.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_ed25519_sign")]
    public static partial void Ed25519Sign(
        [In] byte[] message,
        int messageLen,
        [In] byte[] publicKey32,
        [In] byte[] secretKey64,
        [Out] byte[] outSignature64);

    /// <summary>Returns 1 when the signature verifies, 0 otherwise.</summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_ed25519_verify")]
    public static partial sbyte Ed25519Verify(
        [In] byte[] signature64,
        [In] byte[] message,
        int messageLen,
        [In] byte[] publicKey32);

    /// <summary>
    /// Stores a mutable BEP44 item on the DHT. The shim signs the value
    /// internally via <c>lt::dht::sign_mutable_item</c>; the caller only
    /// supplies keys + salt + raw bytes + sequence number. Completion fires a
    /// <c>dht_put_alert</c> with the mutable envelope filled in.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_dht_put_item_mutable")]
    public static partial void DhtPutItemMutable(
        IntPtr sessionHandle,
        [In] byte[] publicKey32,
        [In] byte[] secretKey64,
        [In] byte[] salt,
        int saltLen,
        [In] byte[] value,
        int valueLen,
        long seq);

    /// <summary>
    /// Attaches a torrent from a previously-captured resume blob (bencoded
    /// add_torrent_params produced by <c>write_resume_data_buf</c>).
    /// </summary>
    /// <returns>A torrent-session handle, or <see cref="IntPtr.Zero"/> on parse failure.</returns>
    [LibraryImport(LibraryName, EntryPoint = "lts_add_torrent_with_resume", StringMarshalling = StringMarshalling.Utf8)]
    public static partial IntPtr AddTorrentWithResume(IntPtr sessionHandle, byte[] resumeData, int length, [MarshalAs(UnmanagedType.LPUTF8Str)] string savePath);

    /// <summary>
    /// Gets the torrent info from the torrent handle.
    /// </summary>
    /// <param name="torrentHandle">The handle of the torrent</param>
    /// <returns>A handle to a <see cref="NativeStructs.TorrentFile"/> struct (torrent metadata handle)</returns>
    /// <remarks>A call to FreeTorrentInfo is needed to release unmanaged resources after usage has finished.</remarks>
    [LibraryImport(LibraryName, EntryPoint = "get_torrent_info")]
    public static partial IntPtr GetTorrentInfo(IntPtr torrentHandle);

    /// <summary>
    /// Destroys a torrent info handle.
    /// </summary>
    /// <param name="torrentInfoHandle">The handle to release</param>
    [LibraryImport(LibraryName, EntryPoint = "destroy_torrent_info")]
    public static partial void FreeTorrentInfo(IntPtr torrentInfoHandle);

    /// <summary>
    /// Uniform piece length in bytes. Returns 0 on invalid handle.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_info_piece_length")]
    public static partial int TorrentInfoPieceLength(IntPtr torrentInfoHandle);

    /// <summary>
    /// Returns the piece count for a torrent handle. Works for TorrentHandle and for
    /// resume-loaded MagnetHandle with embedded metadata. Returns 0 when metadata has
    /// not yet resolved (pre-metadata magnet).
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_num_pieces")]
    public static partial int TorrentHandleNumPieces(IntPtr torrentHandle);

    /// <summary>
    /// Total size of all files in the torrent in bytes. Works for TorrentHandle and
    /// resume-loaded MagnetHandle with embedded metadata. Returns 0 when metadata
    /// has not yet resolved.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_total_size")]
    public static partial long TorrentHandleTotalSize(IntPtr torrentHandle);

    /// <summary>
    /// Gets the file list for a torrent handle directly. Works for TorrentHandle and
    /// resume-loaded MagnetHandle with embedded metadata. Caller must free with
    /// <see cref="FreeTorrentFileList"/>.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_handle_file_list")]
    public static partial void GetTorrentHandleFileList(IntPtr torrentHandle, out NativeStructs.TorrentFileList files);

    /// <summary>
    /// Total number of pieces in the torrent. Returns 0 on invalid handle.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_info_num_pieces")]
    public static partial int TorrentInfoNumPieces(IntPtr torrentInfoHandle);

    /// <summary>
    /// Size of the piece at <paramref name="pieceIndex"/> in bytes. Equal to
    /// the uniform piece length for every piece except (potentially) the last.
    /// Returns 0 on invalid handle or out-of-range index.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_info_piece_size")]
    public static partial int TorrentInfoPieceSize(IntPtr torrentInfoHandle, int pieceIndex);

    /// <summary>
    /// Fills <paramref name="outHash20"/> with the V1 SHA-1 hash of the piece
    /// at <paramref name="pieceIndex"/>. Returns false (and leaves the buffer
    /// untouched) on invalid handle, out-of-range index, or V2-only torrent.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_info_hash_for_piece")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static partial bool TorrentInfoHashForPiece(IntPtr torrentInfoHandle, int pieceIndex, [Out] byte[] outHash20);

    /// <summary>
    /// True when the torrent carries BEP-52 v2 metadata (SHA-256 merkle trees
    /// — v2-only or hybrid v1+v2). Returns false on invalid handle.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_info_is_v2")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static partial bool TorrentInfoIsV2(IntPtr torrentInfoHandle);

    /// <summary>
    /// Per-file flag bits from <c>file_storage::file_flags_t</c>. Returns 0 on
    /// invalid handle or out-of-range index.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_info_file_flags")]
    public static partial byte TorrentInfoFileFlags(IntPtr torrentInfoHandle, int fileIndex);

    /// <summary>
    /// Fills <paramref name="outRoot32"/> with the V2 SHA-256 file root merkle
    /// hash. Returns false on invalid handle / out-of-range / non-V2 torrent
    /// / file without a stored root (all-zero hash surfaces as false).
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_info_file_root")]
    [return: MarshalAs(UnmanagedType.I1)]
    public static partial bool TorrentInfoFileRoot(IntPtr torrentInfoHandle, int fileIndex, [Out] byte[] outRoot32);

    /// <summary>
    /// Copies the UTF-8 symlink target for a file marked with the symlink flag
    /// into <paramref name="buffer"/>, NUL-terminated. Returns the number of
    /// bytes written (excluding NUL), or 0 on invalid handle / out-of-range /
    /// non-symlink file / empty target. Truncates to
    /// <paramref name="bufferSize"/> - 1 without failure.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_info_symlink")]
    public static partial int TorrentInfoSymlink(IntPtr torrentInfoHandle, int fileIndex, [Out] byte[] buffer, int bufferSize);

    /// <summary>
    /// Maps a byte offset in the torrent's virtual concatenated stream to the
    /// file index that contains it. Returns -1 on invalid handle, negative
    /// offset, or offset ≥ total size.
    /// </summary>
    [LibraryImport(LibraryName, EntryPoint = "lts_torrent_info_file_index_at_offset")]
    public static partial int TorrentInfoFileIndexAtOffset(IntPtr torrentInfoHandle, long offset);
